@@ -1,6 +1,7 @@
 0.2.2cvs
 ========
 
+- Reduce dependencies in MainWindow.h
 - Store list of servers in connect dialog
 - Added persistant database
 - Added CHANGES file
